# master-python

./: README.md  pyproject.toml
interfaces/: formales.py  informales.py
